add Tour Tickets

--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -44,16 +44,61 @@
             <!-- End Search button -->
         </div>
 
+        <!-- Slider -->
         <div id="slider">
             <div class="text-content">
                 <h2 class="text-heading">New York</h2>
                 <div class="text-description">Lorem ipsum dolor, voluptatem doloremque esse repudiandae hic.</div>
-
             </div>
         </div>
+        <!-- End Slider -->
 
         <div id="content">
+            <!-- About -->
+            <div class="content-section">
+                <h2 class="section-heading">THE BAND</h2>
+                <p class="section-sub-heading">We love music</p>
+                <p class="about-text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur tenetur aliquid, quasi expedita nemo dolorum perspiciatis rem itaque ea exercitationem illo blanditiis amet ad esse et, ab asperiores aperiam eum..Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque pariatur, magnam repudiandae delectus maiores cum eum laborum temporibus consequuntur inventore quod sapiente ut aspernatur.
+                </p>
+                <div class="member-list">
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                    </div>
 
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                    </div>
+
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+            <!-- End About -->
+            <!-- Tour -->
+            <div class="tour-section">
+                <div class="content-section">
+                    <h2 class="section-heading text-white">TOUR DATES</h2>
+                    <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                    <ul class="tickets-list">
+                        <li>September <span class="sold-out">Sold Out</span></li>
+                        <li>October <span class="sold-out">Sold Out</span></li>
+                        <li>November <span class="quantity">3</span></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Tour -->
+            <!-- Contact -->
+            <div class="content-section">
+                <h2 class="section-heading">Contact</h2>
+                <p class="section-sub-heading">Fan? Drop a note!</p>
+            </div>
+            <!-- End Contact -->
         </div>
 
         <div id="footer">
