--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -80,19 +80,57 @@
                 </div>
             </div>
             <!-- End About -->
+
             <!-- Tour -->
             <div class="tour-section">
                 <div class="content-section">
                     <h2 class="section-heading text-white">TOUR DATES</h2>
                     <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                    
+            <!-- Tickets -->
                     <ul class="tickets-list">
                         <li>September <span class="sold-out">Sold Out</span></li>
                         <li>October <span class="sold-out">Sold Out</span></li>
                         <li>November <span class="quantity">3</span></li>
                     </ul>
+            <!-- End Tickets -->
+
+            <!-- Places -->
+                <div class="places-list">
+                    <div class="place-item">
+                        <img src="/W3_band/assets/img/Place/newyork.jpg" alt="New York" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">New York</h3>
+                            <p class="place-time">Fri 27 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <a href="#" class="place-buy-ticket">Buy Tickets</a>
+                        </div>
+                    </div>
+
+                    <div class="place-item">
+                        <img src="/W3_band/assets/img/Place/paris.jpg" alt="Paris" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">Paris</h3>
+                            <p class="place-time">Sat 28 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <a href="#" class="place-buy-ticket">Buy Tickets</a>
+                        </div>
+                    </div>
+
+                    <div class="place-item">
+                        <img src="/W3_band/assets/img/Place/sanfran.jpg" alt="San Francisco" class="place-img">
+                        <div class="place-body">
+                            <h3 class="place-heading">San Francisco</h3>
+                            <p class="place-time">Sun 29 Nov 2016</p>
+                            <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <a href="#" class="place-buy-ticket">Buy Tickets</a>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
             <!-- End Tour -->
+
             <!-- Contact -->
             <div class="content-section">
                 <h2 class="section-heading">Contact</h2>
