--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -126,6 +126,7 @@
                             <a href="#" class="place-buy-ticket">Buy Tickets</a>
                         </div>
                     </div>
+                    <div class="clear"></div>
                 </div>
                 </div>
             </div>
@@ -143,6 +144,43 @@
 
         </div>
 
+    </div>
+
+    <div class="model">
+        <div class="model-container">
+            <div class="model-close">
+                <i class="ti-close"></i>
+            </div>
+
+            <header class="model-header">
+                <i class="model-header-icon ti-bag"></i>
+                Tickets
+            </header>
+
+            <div class="model-body">
+                <label for="quantity" class="model-label">
+                    <i class="ti-shopping-cart"></i>
+                    Tickets, $15 per person
+                </label>
+
+                <input id="quantity" type="text" class="model-input" placeholder="How many?">
+
+                <label for="enter-email" class="model-label">
+                    <i class="ti-user"></i>
+                    Send to
+                </label>
+
+                <input id="enter-email" type="Email" class="model-input" placeholder="Enter email...">
+
+                <button id="buy-tickets">
+                    Pay <i class="ti-check"></i>
+                </button>
+            </div>
+
+            <footer class="model-footer">
+                <p class="model-help">Need <a href="#">Help</a></p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
