--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
-    <link rel="icon" href="/HTML-CSS/W3_band/assets/img/Logo/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
-    <link rel="stylesheet" href="/HTML-CSS/W3_band/assets/css/style.css">
-    <link rel="stylesheet" href="/HTML-CSS/W3_band/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="icon" href="./assets/img/Logo/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
     <div id="main">
@@ -65,17 +65,17 @@
                 <div class="row member-list">
                     <div class="col triple-col text-center">
                         <p class="member-name">Name</p>
-                        <img src="/HTML-CSS/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                        <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
 
                     <div class="col triple-col text-center">
                         <p class="member-name">Name</p>
-                        <img src="/HTML-CSS/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                        <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
 
                     <div class="col triple-col text-center">
                         <p class="member-name">Name</p>
-                        <img src="/HTML-CSS/W3_band/assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
+                        <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
             <!-- Places -->
                 <div class="row places-list">
                     <div class="col triple-col">
-                        <img src="/HTML-CSS/W3_band/assets/img/Place/newyork.jpg" alt="New York" class="place-img">
+                        <img src="./assets/img/Place/newyork.jpg" alt="New York" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
                             <p class="place-time">Fri 27 Nov 2016</p>
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="col triple-col">
-                        <img src="/HTML-CSS/W3_band/assets/img/Place/paris.jpg" alt="Paris" class="place-img">
+                        <img src="./assets/img/Place/paris.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
                             <p class="place-time">Sat 28 Nov 2016</p>
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="col triple-col">
-                        <img src="/HTML-CSS/W3_band/assets/img/Place/sanfran.jpg" alt="San Francisco" class="place-img">
+                        <img src="./assets/img/Place/sanfran.jpg" alt="San Francisco" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
                             <p class="place-time">Sun 29 Nov 2016</p>
@@ -167,7 +167,7 @@
 
             <!-- Map -->
             <div class="map-section">
-                <img src="/HTML-CSS/W3_band/assets/img/Map/map.jpg" alt="Map.img">
+                <img src="./assets/img/Map/map.jpg" alt="Map.img">
             </div>
             <!-- End Map -->
         </div>
