--- a/Grid_library/grid.html
+++ b/Grid_library/grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/grid.css">
+    <link rel="stylesheet" href="/Grid_library/grid.css">
     <style>
         body {
             margin: 0;
@@ -18,7 +18,7 @@
 
         h1 {
             padding: 100px 0;
-            font-size: 100px;
+            font-size: 50px;
             color: #fff;
             margin: auto;
         }
@@ -26,7 +26,11 @@
 </head>
 <body>
     <div class="grid wide container">
-        <h1>Grid System</h1>
+        <div class="row">
+            <h1>Column 1</h1>
+            <h1>Column 2</h1>
+            <h1>Column 3</h1>
+        </div>
     </div>
 </body>
 </html>
