--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -7,6 +7,7 @@
     <title>The Band</title>
     <link rel="icon" href="./assets/img/Logo/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -42,6 +43,10 @@
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
             </div>
+
+            <div id="mobile-menu" class ="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
+            </div>
             <!-- End Search button -->
         </div>
 
@@ -54,6 +59,7 @@
         </div>
         <!-- End Slider -->
 
+        <!-- Content body -->
         <div id="content">
             <!-- About -->
             <div id="band" class="content-section">
@@ -171,6 +177,7 @@
             </div>
             <!-- End Map -->
         </div>
+        <!-- End content body -->
 
         <!-- Footer -->
         <div id="footer">
@@ -226,6 +233,7 @@
     </div>
 
     <script>
+        //Buy Tickets 
         const buyBtns = document.querySelectorAll('.js-buy-ticket');
         const model = document.querySelector('.js-model');
         const modelContainer = document.querySelector('.js-model-container');
@@ -248,6 +256,35 @@
         modelContainer.addEventListener('click', (event) => {
             event.stopPropagation()
         })
+        // End buy tickets
+
+        // Click to close/open Mobile menu
+        var header = document.getElementById("header");
+        var mobileMenu = document.getElementById("mobile-menu");
+        var headerHeight = header.clientHeight;
+
+        mobileMenu.onclick = function() {
+            var isClosed = header.clientHeight === headerHeight;
+            if (isClosed) {
+                header.style.height = "auto";
+            }
+            else {
+                header.style.height = null;
+            }
+        }
+        // End click to close/open Mobile menu
+
+        // Hidden nav 
+        var menuItems = document.querySelectorAll("#nav li a[href*= '#']");
+        for (var i = 0; i < menuItems.length; i++) {
+            var menuItem = menuItems[i];
+
+            menuItem.onclick = function() {
+                header.style.height = null;
+            }
+            
+        }
+        // End hidden nav
     </script>
 </body>
 </html>
