--- a/W3_band/index.html
+++ b/W3_band/index.html
@@ -69,17 +69,17 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur tenetur aliquid, quasi expedita nemo dolorum perspiciatis rem itaque ea exercitationem illo blanditiis amet ad esse et, ab asperiores aperiam eum..Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque pariatur, magnam repudiandae delectus maiores cum eum laborum temporibus consequuntur inventore quod sapiente ut aspernatur.
                 </p>
                 <div class="row member-list">
-                    <div class="col triple-col text-center">
+                    <div class="s-col-full col triple-col text-center mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
 
-                    <div class="col triple-col text-center">
+                    <div class="s-col-full col triple-col text-center mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
 
-                    <div class="col triple-col text-center">
+                    <div class="s-col-full col triple-col text-center mt-32">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/Band/bandmember.jpg" alt="Dan Raynolds" class="member-img">
                     </div>
@@ -103,33 +103,33 @@
 
             <!-- Places -->
                 <div class="row places-list">
-                    <div class="col triple-col">
+                    <div class="s-col-full col triple-col mt-16">
                         <img src="./assets/img/Place/newyork.jpg" alt="New York" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">New York</h3>
                             <p class="place-time">Fri 27 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button href="#" class="place-buy-ticket js-buy-ticket">Buy Tickets</button>
+                            <button href="#" class="place-buy-ticket js-buy-ticket s-full-width">Buy Tickets</button>
                         </div>
                     </div>
 
-                    <div class="col triple-col">
+                    <div class="s-col-full col triple-col mt-16">
                         <img src="./assets/img/Place/paris.jpg" alt="Paris" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">Paris</h3>
                             <p class="place-time">Sat 28 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button href="#" class="place-buy-ticket js-buy-ticket">Buy Tickets</button>
+                            <button href="#" class="place-buy-ticket js-buy-ticket s-full-width">Buy Tickets</button>
                         </div>
                     </div>
 
-                    <div class="col triple-col">
+                    <div class="s-col-full col triple-col mt-16">
                         <img src="./assets/img/Place/sanfran.jpg" alt="San Francisco" class="place-img">
                         <div class="place-body">
                             <h3 class="place-heading">San Francisco</h3>
                             <p class="place-time">Sun 29 Nov 2016</p>
                             <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                            <button href="#" class="place-buy-ticket js-buy-ticket">Buy Tickets</button>
+                            <button href="#" class="place-buy-ticket js-buy-ticket s-full-width">Buy Tickets</button>
                         </div>
                     </div>
                 </div>
@@ -143,13 +143,13 @@
                 <p class="section-sub-heading">Fan? Drop a note!</p>
 
                 <div class="contact-content row">
-                    <div class="contact-info col half-col">
+                    <div class="contact-info col half-col s-col-full">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                         <p><i class="ti-email"></i>Email: mail@mail.com</p>
                     </div>
 
-                    <div class="contact-form col half-col">
+                    <div class="contact-form col half-col s-col-full">
                         <form action="">
                             <div class="row">
                                 <div class="col half-col">
@@ -164,7 +164,7 @@
                                     <input type="text" placeholder="Message" class="form-control">
                                 </div>
                             </div>
-                            <input type="submit" value="SEND" class="form-submit-btn mt-16">
+                            <input type="submit" value="SEND" class="form-submit-btn mt-16 s-full-width">
                         </form>
                     </div>
                 </div>
